--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^6.1.0",
+    "@mui/lab": "^6.0.0-beta.12",
     "@mui/material": "^6.1.0",
     "@mui/material-nextjs": "^6.1.0",
     "framer-motion": "^11.5.4",
     "next": "14.2.3",
+    "notistack": "^3.0.1",
     "react": "^18",
     "react-dom": "^18",
     "resend": "^4.0.0"
