--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/lab": "^6.0.0-beta.12",
     "@mui/material": "^6.1.0",
     "@mui/material-nextjs": "^6.1.0",
+    "@next/third-parties": "^15.0.2",
     "framer-motion": "^11.5.4",
     "next": "14.2.3",
     "notistack": "^3.0.1",
