--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "notistack": "^3.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "resend": "^4.0.0"
+    "resend": "^4.0.0",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@types/node": "^20",
