--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@next/third-parties": "^15.0.2",
     "framer-motion": "^11.5.4",
     "next": "14.2.3",
+    "next-intl": "^3.26.4",
     "notistack": "^3.0.1",
     "react": "^18",
     "react-dom": "^18",
