--- a/package.json
+++ b/package.json
@@ -17,14 +17,19 @@
     "@mui/material": "^6.1.0",
     "@mui/material-nextjs": "^6.1.0",
     "@next/third-parties": "^15.0.2",
+    "@react-three/drei": "^10.6.1",
+    "@react-three/fiber": "8",
+    "@react-three/postprocessing": "^3.0.4",
     "framer-motion": "^11.5.4",
+    "leva": "^0.10.0",
     "next": "14.2.3",
     "next-intl": "^3.26.4",
     "notistack": "^3.0.1",
     "react": "^18",
     "react-dom": "^18",
     "resend": "^4.0.0",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "three": "^0.179.1"
   },
   "devDependencies": {
     "@types/node": "^20",
